# coding-dojo-cpp

./: .clangformat  CMakeLists.txt  README.md
include/: library.hpp
src/: library.cpp  test_library.cpp
